--- a/manifest.json
+++ b/manifest.json
@@ -8,42 +8,42 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "image/icons/icon-72x72.png",
+      "src": "image/icons/icon.jpg",
       "type": "image/png",
       "sizes": "72x72"
     },
     {
-      "src": "image/icons/icon-96x96.png",
+      "src": "image/icons/icon.jpg",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "image/icons/icon-128x128.png",
+      "src": "image/icons/icon.jpg",
       "type": "image/png",
       "sizes": "128x128"
     },
     {
-      "src": "image/icons/icon-144x144.png",
+      "src": "image/icons/icon.jpg",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "image/icons/icon-152x152.png",
+      "src": "image/icons/icon.jpg",
       "type": "image/png",
       "sizes": "152x152"
     },
     {
-      "src": "image/icons/icon-192x192.png",
+      "src": "image/icons/icon.jpg",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "image/icons/icon-384x384.png",
+      "src": "image/icons/icon.jpg",
       "type": "image/png",
       "sizes": "384x384"
     },
     {
-      "src": "image/icons/icon-512x512.png",
+      "src": "image/icons/icon.jpg",
       "type": "image/png",
       "sizes": "512x512"
     }
